2007-11-20  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_set_termvar): Fix typo in
	commit dated 2007-11-04.

2007-11-20  Christos Gourdoupis  <achaios@users.sourceforge.net>

	* src/wxterminal/gp_cairo.c (gp_cairo_get_encoding):
	Allow "set encoding utf8" to override whatever the environment claims.
	Bug #1834525

2007-11-19  Ethan A Merritt  <merritt@u.washington.edu>
	* /config/buildvms.com /config/makefile.286 /config/makefile.amg
	/config/makefile.ami /config/makefile.emx /config/makefile.g  
	/config/makefile.msc /config/makefile.msw /config/makefile.mto
	/config/makefile.st /config/makefile.tc /config/makefile.unx
	/config/makefile.win /config/makefile.ztc src/gnuplot.opt:

	Add tabulate.{c|o|obj} to dependencies.  
	Pointed out by <mortenmacfly@users.sourceforge.net>

2007-11-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (enhanced_recursion):  Do not allow the '}' character in a
	font name.  Prevents PostScript badness from the following user error:
	set label "Foo{/Symbol}Baz".
	Bug #1833457.

2007-11-15  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_options):  Allow a string variable for a
	font file name.  Whitespace cleanup.

2007-11-14  Arve Knudsen  <arve_knudsen@users.sourceforge.net>

	* configure.in: Move test for libgd libraries to earlier in script

2007-11-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data) docs/gnuplot.doc:
	Allow 3 columns of data for plot style "histogram errorbars".
	2 column data:   y err          error bar from y-err to y+err
	3 column data:   y ymin ymax    error bar from ymin to ymax

2007-11-13  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc term/post.trm term/pm.trm:  Move description of
	enhanced text mode out of the postscript terminal and into the main
	documentation.

2007-11-13  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/checkdoc.c:  Teach checkdoc to ignore embedded figures.
